# docker-workshop

./: .gitignore  README.md  pyproject.toml
pipeline/: Dockerfile  docker-compose.yaml  ingest_data.py  notebook.ipynb  output_12.parquet  pipeline.py  pyproject.toml
pipeline/.ipynb_checkpoints/: notebook-checkpoint.ipynb  pyproject-checkpoint.toml
test/: file3.txt  script.py
