[project]
name = "pipeline"
version = "0.1.0"
description = ""
authors = [
    {name = "rebecafmatias",email = "rebecafeitosamatias@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "pyarrow (>=22.0.0,<23.0.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "click (>=8.3.1,<9.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pgcli (>=4.3.0,<5.0.0)",
    "psycopg-binary (>=3.3.2,<4.0.0)",
    "jupyter (>=1.1.1,<2.0.0)"
]
